# sparkplot

./: .coverage  PLAN.md  README.md  pyproject.toml
src/chalk/: __init__.py  charset.py  layout.py  rasterize.py  validate.py
src/sketchplot/: __init__.py  canvas.py  layout.py  rasterize.py
src/sparkplot/: __init__.py  layout.py  scale.py
tests/: test_canvas.py  test_hist.py  test_line.py  test_scale.py  test_validate.py
tests/fixtures/: hist_basic_ascii.txt  hist_basic_unicode.txt  hist_large_ascii.txt  hist_large_unicode.txt  hist_single_bin_ascii.txt  hist_single_bin_unicode.txt  line_constant_ascii.txt  line_constant_unicode.txt  line_single_point_ascii.txt  line_single_point_unicode.txt
